kustomizations/storage/unmanic/deployment.yaml
  # https://docs.unmanic.app/docs/installation/kubernetes 
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: unmanic
  spec:
    replicas: 0
    selector:
      matchLabels:
        app: unmanic
    template:
      metadata:
        labels:
          app: unmanic
      spec:
        containers:
        - name: unmanic
          image: josh5/unmanic:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8888
            name: webui
            protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              cpu: 4
              memory: 8Gi
          livenessProbe:
            httpGet:
              path: /
              port: webui
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: webui
            initialDelaySeconds: 30
            periodSeconds: 10
          securityContext:
            privileged: true
          volumeMounts:
          - name: dri
            mountPath: /dev/dri
            readOnly: false
          - name: config
            mountPath: /config
          - name: cache
            mountPath: /tmp/unmanic
          - name: animations
            mountPath: /media/animations
          - name: multimedia
            mountPath: /media/multimedia
          - name: multimedia2
            mountPath: /media/multimedia2
        nodeSelector:
          kubernetes.io/hostname: castillo
        securityContext:
          supplementalGroups: [44, 107, 992]
        volumes:
        - name: dri
          hostPath:
            path: /dev/dri
        - name: config
          hostPath:
            path: /mnt/unmanic
        - name: cache
          emptyDir: {}
        - name: animations
          hostPath:
            path: /mnt/animations
        - name: multimedia
          hostPath:
            path: /mnt/multimedia
        - name: multimedia2
          hostPath:
            path: /mnt/multimedia2
