kustomizations/storage/unmanic/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unmanic
spec:
  ports:
  - name: web
    protocol: TCP
    port: 8888
    targetPort: 8888
  selector:
    app.kubernetes.io/name: unmanic
  type: ClusterIP
